--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@next/font": "^13.1.1",
     "next": "^13.1.1",
+    "normalize.css": "^8.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -47,6 +48,7 @@
     "stylelint-config-standard": "^29.0.0",
     "stylelint-config-standard-scss": "^6.1.0",
     "stylelint-order": "^6.0.1",
+    "typed-scss-modules": "^7.0.1",
     "typescript": "4.9.4"
   }
 }
