--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,7 @@
 {
   "root": true,
   "extends": ["eslint:recommended", "next"],
-  "plugins": ["prettier", "simple-import-sort", "testing-library"],
+  "plugins": ["prettier", "simple-import-sort", "testing-library", "unused-imports"],
   "rules": {
     "no-return-await": "warn",
     "prettier/prettier": "error",
@@ -20,9 +20,20 @@
         "project": "./tsconfig.json"
       },
       "rules": {
+        "no-unused-vars": "off",
         // Note: you must disable the base rule as it can report incorrect errors
         "require-await": "off",
-        "@typescript-eslint/require-await": "error"
+        "@typescript-eslint/require-await": "error",
+        "unused-imports/no-unused-imports": "error",
+        "unused-imports/no-unused-vars": [
+          "warn",
+          {
+            "vars": "all",
+            "varsIgnorePattern": "^_",
+            "args": "after-used",
+            "argsIgnorePattern": "^_"
+          }
+        ]
       }
     },
     // Only uses Testing Library lint rules in test files
