--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-simple-import-sort": "^8.0.0",
     "eslint-plugin-testing-library": "^5.9.1",
+    "eslint-plugin-unused-imports": "^2.0.0",
     "jest": "29.3.1",
     "jest-environment-jsdom": "29.3.1",
     "postcss": "^8.4.21",
