--- a/package.json
+++ b/package.json
@@ -1,57 +1,25 @@
 {
-  "name": "next-starter",
+  "name": "nextjs-turbo-starter",
   "version": "0.1.0",
   "private": true,
+  "workspaces": [
+    "apps/*",
+    "packages/*"
+  ],
   "scripts": {
-    "dev": "next dev -p 4200",
-    "build": "next build",
-    "format": "prettier --check --ignore-path .gitignore .",
-    "format:fix": "prettier --write --ignore-path .gitignore .",
-    "lint": "next lint",
-    "start": "next start",
-    "stylelint": "stylelint '**/*.scss'",
-    "test": "jest --watch",
-    "test:ci": "jest --ci",
-    "typed-scss": "typed-scss-modules pages",
-    "typed-scss:watch": "typed-scss-modules pages --watch"
-  },
-  "dependencies": {
-    "@next/font": "^13.1.1",
-    "next": "^13.1.1",
-    "normalize.css": "^8.0.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "build": "turbo run build",
+    "dev": "turbo run dev typed-scss:watch --parallel",
+    "format": "prettier --write \"**/*.{ts,tsx,md}\" --ignore-path .gitignore",
+    "lint": "turbo run lint",
+    "test": "turbo run test"
   },
   "devDependencies": {
-    "@testing-library/dom": "^8.19.1",
-    "@testing-library/jest-dom": "5.16.5",
-    "@testing-library/react": "13.4.0",
-    "@testing-library/user-event": "14.4.3",
-    "@types/node": "^18.11.18",
-    "@types/react": "18.0.26",
-    "@types/react-dom": "^18.0.10",
-    "@types/testing-library__jest-dom": "5.14.5",
-    "@typescript-eslint/eslint-plugin": "^5.48.1",
-    "@typescript-eslint/parser": "^5.48.1",
-    "eslint": "^8.31.0",
-    "eslint-config-next": "^13.1.1",
-    "eslint-config-prettier": "^8.6.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-simple-import-sort": "^8.0.0",
-    "eslint-plugin-testing-library": "^5.9.1",
-    "eslint-plugin-unused-imports": "^2.0.0",
-    "jest": "29.3.1",
-    "jest-environment-jsdom": "29.3.1",
-    "postcss": "^8.4.21",
-    "postcss-scss": "^4.0.6",
-    "prettier": "^2.8.2",
-    "sass": "^1.57.1",
-    "stylelint": "^14.16.1",
-    "stylelint-config-prettier": "^9.0.4",
-    "stylelint-config-standard": "^29.0.0",
-    "stylelint-config-standard-scss": "^6.1.0",
-    "stylelint-order": "^6.0.1",
-    "typed-scss-modules": "^7.0.1",
-    "typescript": "4.9.4"
-  }
+    "eslint-config-custom": "workspace:*",
+    "prettier": "^2.8.3",
+    "turbo": "^1.7.0"
+  },
+  "engines": {
+    "node": ">=14.0.0"
+  },
+  "packageManager": "pnpm@7.22.0"
 }
