Fix ESLint error in JS

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,5 @@
     "source.fixAll.stylelint": true
   },
   "stylelint.snippet": ["scss"],
-  "stylelint.validate": ["scss"],
-  "cSpell.words": ["Turborepo"]
+  "stylelint.validate": ["scss"]
 }
