--- a/packages/eslint-config-custom/package.json
+++ b/packages/eslint-config-custom/package.json
@@ -7,14 +7,14 @@
     "@typescript-eslint/eslint-plugin": "^5.48.1",
     "@typescript-eslint/parser": "^5.48.1",
     "eslint": "^8.31.0",
-    "eslint-config-next": "^13.1.1",
+    "eslint-config-next": "^13.1.2",
     "eslint-config-prettier": "^8.6.0",
+    "eslint-config-turbo": "^0.0.7",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-simple-import-sort": "^8.0.0",
     "eslint-plugin-testing-library": "^5.9.1",
     "eslint-plugin-unused-imports": "^2.0.0",
-    "eslint-config-turbo": "latest",
-    "prettier": "^2.8.2"
+    "prettier": "^2.8.3"
   },
   "devDependencies": {
     "typescript": "4.9.4"
