--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -30,6 +30,7 @@
     "@types/node": "^18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "^18.0.10",
+    "@types/testing-library__jest-dom": "5.14.5",
     "eslint": "^8.31.0",
     "eslint-config-custom": "workspace:*",
     "eslint-plugin-testing-library": "^5.9.1",
