--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
     "packages/*"
   ],
   "scripts": {
-    "build": "turbo run build",
-    "dev": "turbo run dev typed-scss:watch --parallel",
+    "build": "FORCE_COLOR=1 turbo run build",
+    "dev": "FORCE_COLOR=1 turbo run dev typed-scss:watch --parallel",
     "format": "prettier --write \"**/*.{ts,tsx,md,js}\" --ignore-path .gitignore",
-    "lint": "turbo run lint",
-    "test": "turbo run test"
+    "lint": "FORCE_COLOR=1 turbo run lint",
+    "test": "FORCE_COLOR=1 turbo run test"
   },
   "devDependencies": {
     "eslint-config-custom": "workspace:*",
