--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -8,8 +8,7 @@
     "lint": "next lint",
     "start": "next start",
     "stylelint": "stylelint '**/*.scss'",
-    "test": "jest --watch",
-    "test:ci": "jest --ci",
+    "test": "vitest",
     "typed-scss": "typed-scss-modules '(pages|components)/**/*.scss' --watch",
     "typed-scss:watch": "typed-scss-modules '(pages|components)/**/*.scss' --watch"
   },
@@ -23,24 +22,22 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.12",
-    "@testing-library/dom": "^8.19.1",
-    "@testing-library/jest-dom": "5.16.5",
-    "@testing-library/react": "13.4.0",
-    "@testing-library/user-event": "14.4.3",
+    "@testing-library/react": "^13.4.0",
     "@types/node": "^18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "^18.0.10",
-    "@types/testing-library__jest-dom": "5.14.5",
+    "@vitejs/plugin-react": "^3.1.0",
     "eslint": "^8.31.0",
     "eslint-config-custom": "workspace:*",
     "eslint-plugin-testing-library": "^5.9.1",
-    "jest": "29.3.1",
-    "jest-environment-jsdom": "29.3.1",
+    "jsdom": "^21.1.0",
     "sass": "^1.57.1",
     "stylelint": "^14.16.1",
     "stylelint-config-custom": "workspace:*",
     "tsconfig": "workspace:*",
     "typed-scss-modules": "^7.0.2",
-    "typescript": "4.9.4"
+    "typescript": "4.9.4",
+    "vite": "^4.1.0-beta.0",
+    "vitest": "^0.28.3"
   }
 }
