--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -38,6 +38,7 @@
     "typed-scss-modules": "^7.0.2",
     "typescript": "4.9.4",
     "vite": "^4.1.0-beta.0",
+    "vite-tsconfig-paths": "^4.0.5",
     "vitest": "^0.28.3"
   }
 }
