--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,8 +13,8 @@
     "typed-scss:watch": "typed-scss-modules '(pages|components)/**/*.scss' --watch"
   },
   "dependencies": {
-    "@next/font": "^13.1.2",
-    "next": "^13.1.2",
+    "@next/font": "^13.1.6",
+    "next": "^13.1.6",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -24,20 +24,20 @@
     "@babel/core": "^7.20.12",
     "@testing-library/react": "^13.4.0",
     "@types/node": "^18.11.18",
-    "@types/react": "18.0.26",
+    "@types/react": "18.0.27",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.1.0",
-    "eslint": "^8.31.0",
+    "eslint": "^8.33.0",
     "eslint-config-custom": "workspace:*",
-    "eslint-plugin-testing-library": "^5.9.1",
+    "eslint-plugin-testing-library": "^5.10.0",
     "jsdom": "^21.1.0",
-    "sass": "^1.57.1",
+    "sass": "^1.58.0",
     "stylelint": "^14.16.1",
     "stylelint-config-custom": "workspace:*",
     "tsconfig": "workspace:*",
     "typed-scss-modules": "^7.0.2",
-    "typescript": "4.9.4",
-    "vite": "^4.1.0-beta.0",
+    "typescript": "4.9.5",
+    "vite": "^4.1.1",
     "vite-tsconfig-paths": "^4.0.5",
     "vitest": "^0.28.3"
   }
