--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "build": "next build",
-    "dev": "next dev -p 4200 --turbo",
+    "dev": "next dev -p 4200",
     "lint": "next lint",
     "start": "next start",
     "stylelint": "stylelint '**/*.scss'",
