--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -40,5 +40,8 @@
     "vite": "^4.1.1",
     "vite-tsconfig-paths": "^4.0.5",
     "vitest": "^0.28.3"
+  },
+  "//": {
+    "scripts/build": "rm -rf .next needed for Next to properly copy over images from public."
   }
 }
