--- a/apps/landing-web/package.json
+++ b/apps/landing-web/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "web",
+  "name": "landing-web",
   "version": "0.0.0",
   "private": true,
   "scripts": {
     "build": "rm -rf .next && next build",
-    "dev": "next dev -p 4201",
+    "dev": "next dev -p 4200",
     "lint": "next lint",
     "start": "next start",
     "stylelint": "stylelint '**/*.scss'",
