--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,10 +14,12 @@
   },
   "dependencies": {
     "@next/font": "^13.1.6",
+    "@types/ua-parser-js": "^0.7.36",
     "next": "^13.1.6",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "ua-parser-js": "^1.0.33",
     "ui": "workspace:*"
   },
   "devDependencies": {
