--- a/packages/stylelint-config-custom/package.json
+++ b/packages/stylelint-config-custom/package.json
@@ -3,8 +3,12 @@
   "version": "0.1.0",
   "main": "index.js",
   "license": "MIT",
-  "dependencies": {},
   "publishConfig": {
     "access": "public"
+  },
+  "devDependencies": {
+    "stylelint": "^15.8.0",
+    "stylelint-config-standard-scss": "^9.0.0",
+    "stylelint-order": "^6.0.3"
   }
 }
