--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,4 +7,13 @@
   "stylelint.validate": ["scss"],
   "stylelint.packageManager": "pnpm",
   "scss.validate": false,
+  "eslint.workingDirectories": [
+    {
+      "mode": "auto"
+    }
+  ],
+  "editor.formatOnSave": true,
+  "[javascript][typescript][typescriptreact][json][jsonc][html][markdown]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  }
 }
