Fix markdown linter

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,7 +13,10 @@
     }
   ],
   "editor.formatOnSave": true,
-  "[javascript][typescript][typescriptreact][json][jsonc][html][markdown]": {
+  "[javascript][typescript][typescriptreact][json][jsonc][html]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "[markdown]": {
+    "editor.defaultFormatter": "DavidAnson.vscode-markdownlint"
   }
 }
