Add readonlyInclude setting

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,5 +18,8 @@
   },
   "[markdown]": {
     "editor.defaultFormatter": "DavidAnson.vscode-markdownlint"
+  },
+  "files.readonlyInclude": {
+    "**/node_modules/**": true
   }
 }
