--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,5 +21,7 @@
   },
   "files.readonlyInclude": {
     "**/node_modules/**": true
-  }
+  },
+  "editor.linkedEditing": true,
+  "material-icon-theme.activeIconPack": "react"
 }
